# ImeStudy

./: CMakeLists.txt  CS_.txt  FNID_.txt  GCS_.txt  IMC_.txt  IME_CMODE_.txt  IME_xHOTKEY_.txt  IMM32-symbols-win2k3.txt  IMM32-symbols-winxpjp.txt  IMS_.txt  INIT_.txt  KF_.txt  LangIDs.txt  MOD_.txt  PrimaryLangIDs.txt  README.md  SubLangIDs.txt  TAGs.txt  TODO.txt  TYPE_.txt  USER32-symbols-win2k3.txt  USER32-symbols-winxpjp.txt  VK_.txt  WM_.txt  _CHARSET.txt  win32k-symbols-win2k3.txt  win32k-symbols-winxpjp.txt
ARTICLES/: 2022-03-15.md  2022-03-16.md  2022-03-17.md  2022-03-19.md  2022-03-20.md  2022-03-21.md  2022-03-22.md  2022-03-24.md  2022-03-25.md  2022-03-26.md  2022-03-27.md  2022-03-28.md  2022-03-29.md  2022-03-30.md  2022-04-01.md  2022-04-02.md  2022-04-04.md  2022-04-05.md  2022-04-06.md  2022-04-07.md  2022-04-08.md  2022-04-09.md  2022-04-10.md  2022-04-11.md  2022-04-12.md  2022-04-16.md  2022-04-17.md  2022-04-23.md  2022-05-07.md  2022-05-08.md  2022-05-14.md  2022-05-15.md  2022-05-21.md  2022-05-22.md  2022-05-28.md  2022-05-29.md  2022-06-04.md  2022-06-05.md  2022-07-23.md  2022-07-24.md  (+47 more)
ARTICLES/hello1/: build.cmd  hello1.c
ARTICLES/hello10/: build.cmd  hello10.cpp
ARTICLES/hello11/: build.cmd  hello11.cpp
ARTICLES/hello12/: build.cmd  hello12.cpp
ARTICLES/hello13/: build.cmd  hello13.asm  hello13.cpp
ARTICLES/hello14/: build.cmd  hello14.asm  hello14.cpp
ARTICLES/hello15/: build.cmd  hello15.c
ARTICLES/hello16/: CMakeLists.txt  FUNCS.txt  MACROS.txt  build-msvc.cmd  hello16.cpp
ARTICLES/hello17/: build.cmd  hello17.cpp
ARTICLES/hello18/: FUNCS.txt  MACROS.txt
ARTICLES/hello19/: FUNCS.txt  MACROS.txt
ARTICLES/hello2/: build.cmd  hello2.cpp
ARTICLES/hello20/: debug-patch.patch
ARTICLES/hello3/: build.cmd  hello3.cpp
ARTICLES/hello4/: build.cmd  hello4.cpp  hello4_res.rc  resource.h
ARTICLES/hello5/: build.cmd  hello5.cpp  hello5_res.rc  resource.h
ARTICLES/hello6/: build.cmd  hello6.c
ARTICLES/hello7/: build.cmd  hello7.cpp  hello7_res.rc  resource.h
ARTICLES/hello8/: build.cmd  hello8.cpp  hello8_res.rc  resource.h
ARTICLES/hello9/: build.cmd  hello9.cpp  hello9_res.rc  resource.h
ARTICLES/timeadjust/: timeadjust_start.bat  timeadjust_stop.bat
EnumLangIDs/: CMakeLists.txt  EnumLangIDs.cpp
FocusCheck/: CMakeLists.txt  FocusCheck.cpp
IDA/: ctf-types.h  imm-types.h  ole-types.h  types.h  user-types.h  win32k-types.h
ImeMenuTest3/: .gitignore  CMakeLists.txt  CustomImeMenu.c  ImeMenu.c  ImeMenu.h  ImeMenuTest3.c  ImeMenuTest3_res.rc  LICENSE.txt  README.md
ImeOnOffTest/: CMakeLists.txt  ImeOnOffTest.cpp  ImeOnOffTest_res.rc
ImeWndTest/: CMakeLists.txt  ImeWndTest.cpp
IsImeTest/: CMakeLists.txt  IsImeTest.cpp
KeyState/: CMakeLists.txt  KeyState.cpp
KeybdList/: CMakeLists.txt  KeybdList.cpp
KeybdName/: CMakeLists.txt  KeybdName.cpp
LoadKeybd/: CMakeLists.txt  LICENSE.txt  LoadKeybd.cpp
STUDY/: 2022-10-25-kbswitchフランケンテスト.docx  Analysis01.md  Analysis02.md  Analysis03.md  Experiment01.md  Experiment02.md  Experiment03.md  Experiment04.md  Experiment05.md  Experiment06.md  Experiment07.md  Experiment08.md  Experiment09.md  Experiment10.md  Experiment11.md  Experiment12.md  Experiment13.md  Experiment14.md  README.md
STUDY/win10/: dodumpbin.bat  win10-wow64-imm32.dll.dumpbin.txt  win10-wow64-user32.dll.dumpbin.txt
STUDY/win2k3/: dodumpbin.bat  win2k3-imm32.dll.dumpbin.txt  win2k3-user32.dll.dumpbin.txt
STUDY/win2kjp/: dodumpbin.bat  win2kjp-imm32.dll.dumpbin.txt  win2kjp-user32.dll.dumpbin.txt
STUDY/winxpjp/: dodumpbin.bat  winxpjp-imm32.dll.dumpbin.txt  winxpjp-user32.dll.dumpbin.txt
SysLang/: CMakeLists.txt  SysLang.cpp
UserBreak/: CMakeLists.txt  UserBreak.cpp
UserLang/: CMakeLists.txt  UserLang.cpp
WindowHierarchyChecker/: CMakeLists.txt  whc.cpp
msctf/: categorymgr.cpp  interfaces.idl  ranges.cpp  ranges.hpp
struct/: win2k3-CUIFColorTable.xls  win2k3-CUIFColorTableOff10.xls  win2k3-CUIFColorTableSys.xls  win2k3-CUIFObject.xls  win2k3-CUIFShadow.xls  win2k3-CUIFTheme.xls  win2k3-CUIFToolTip.xls  win2k3-CUIFWindow.xls
